<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/stayConnected"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="35sp"
            android:fontFamily="@font/chewy"
            android:text="@string/stayConnected" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/doppio_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpmsg"
            android:textColor="#000000"
            android:textSize="16sp" />



        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_txt"
            android:ems="10"
            android:hint="@string/email_box"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/edit_txt"
            android:ems="10"
            android:hint="@string/pass_box"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etconfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/edit_txt"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/chewy"
            android:text="@string/signUp"
            android:textColor="@color/logintext"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/doppio_one"
            android:text="@string/loginMsg"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>